[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Promotion.gd" type="Script" id=1]
[ext_resource path="res://assets/pieces/royal/white/que.png" type="Texture" id=2]
[ext_resource path="res://assets/pieces/royal/white/roo.png" type="Texture" id=3]
[ext_resource path="res://assets/pieces/royal/white/kni.png" type="Texture" id=4]
[ext_resource path="res://assets/pieces/royal/white/bis.png" type="Texture" id=5]

[node name="Promotion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -566.0
margin_bottom = -1014.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="background2" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 94.0
margin_bottom = 310.0
size_flags_vertical = 0
color = Color( 0, 0, 0, 1 )

[node name="background" type="ColorRect" parent="."]
margin_right = 84.0
margin_bottom = 300.0
size_flags_vertical = 0
color = Color( 0.756863, 0.756863, 0.756863, 1 )

[node name="CenterContainer" type="CenterContainer" parent="background"]
margin_right = 84.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="background/CenterContainer"]
margin_top = 6.0
margin_right = 84.0
margin_bottom = 294.0
custom_constants/separation = 0

[node name="prom_queen" type="Button" parent="background/CenterContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 72.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
clip_text = true
align = 0

[node name="prom_rook" type="Button" parent="background/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 84.0
margin_bottom = 144.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
clip_text = true
align = 0

[node name="prom_knight" type="Button" parent="background/CenterContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 84.0
margin_bottom = 216.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
clip_text = true
align = 0

[node name="prom_bishop" type="Button" parent="background/CenterContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 84.0
margin_bottom = 288.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
clip_text = true
align = 0
[connection signal="pressed" from="background/CenterContainer/VBoxContainer/prom_queen" to="." method="_on_prom_queen_pressed"]
[connection signal="pressed" from="background/CenterContainer/VBoxContainer/prom_rook" to="." method="_on_prom_rook_pressed"]
[connection signal="pressed" from="background/CenterContainer/VBoxContainer/prom_knight" to="." method="_on_prom_knight_pressed"]
[connection signal="pressed" from="background/CenterContainer/VBoxContainer/prom_bishop" to="." method="_on_prom_bishop_pressed"]
